[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "dredd_webpgu_testing"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "dredd_webgpu_testing"
version = "0.0.1"
authors = [
  { name="Amber Gorzynski", email="amber.gorzynski22@imperial.ac.uk" },
  { name="Alastair F. Donaldson", email="alastair.donaldson@imperial.ac.uk" },
]
description = "Runner scripts for research involving the Dredd mutation testing tool applied to WebGPU"
readme = "README.md"
requires-python = ">=3.10"

